src/objects/CountryTimeSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>BE_SLA_Time__c</fullName>
        <label>BE SLA Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BE_Start_Time__c</fullName>
        <label>BE Start Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_SLA_Time__c</fullName>
        <label>DE SLA Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_Start_Time__c</fullName>
        <label>DE Start Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DK_SLA_Time__c</fullName>
        <label>DK SLA Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DK_Start_Time__c</fullName>
        <label>DK Start Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_SLA_Time__c</fullName>
        <label>FR SLA Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_Start_Time__c</fullName>
        <label>FR Start Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IR_SLA_Time__c</fullName>
        <label>IR SLA Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IR_Start_Time__c</fullName>
        <label>IR Start Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NL_SLA_Time__c</fullName>
        <label>NL SLA Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NL_Start_Time__c</fullName>
        <label>NL Start Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NO_SLA_Time__c</fullName>
        <label>NO SLA Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NO_Start_Time__c</fullName>
        <label>NO Start Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_SLA_Time__c</fullName>
        <label>SE SLA Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_Start_Time__c</fullName>
        <label>SE Start Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_SLA_Time__c</fullName>
        <label>SP SLA Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Start_Time__c</fullName>
        <label>SP Start Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UK_SLA_Time__c</fullName>
        <label>UK SLA Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UK_Start_Time__c</fullName>
        <label>UK Start Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>CountryTimeSettings</label>
</CustomObject>